[545] Fix spacing on header

--- a/app/components/header/style.scss
+++ b/app/components/header/style.scss
@@ -38,3 +38,7 @@
     border-bottom-color: govuk-colour("purple");
   }
 }
+
+#navigation {
+  margin: 0;
+}
